# searchEngine

./: .env  .env-example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
src/: api.py  metrics.py  sparse_retrieval.ipynb  training.ipynb  utils.py
src/chunker/: chunker.py
src/datasource/: base.py  datasource.py  dense.py  hybrid.py  sparse.py
src/embedder/: dense.py  embedder.py  sparse.py
src/notebooks/: dense_retrieval.ipynb  hybrid_retrieval.ipynb  sparse_retrieval.ipynb  training.ipynb
src/parser/: parser.py
