[project]
name = "searchengine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=0.28.0",
    "datasets>=4.1.1",
    "dotenv>=0.9.9",
    "fastapi>=0.124.4",
    "fastembed>=0.7.3",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.1",
    "torch>=2.8.0",
    "transformers>=4.56.2",
    "uvicorn>=0.38.0",
]
